# Neurays

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  imgui.ini  network.py  python_scripts.ipynb  sampleConfig.h.in
lib/: CMakeLists.txt
lib/GLFW/src/: mir_window.c
lib/OIDN/: CMakeLists.txt
lib/OIDN/include/OpenImageDenoise/: config.h
lib/OIDN/lib/cmake/OpenImageDenoise-2.2.2/: OpenImageDenoiseConfigVersion.cmake
lib/imgui/: CMakeLists.txt  imfilebrowser.h
lib/tinyxml2/: CMakeLists.txt  tinyxml2.cpp
models/: media.mpml
models/env/: custom_envmap.hdr  garden.hdr
models/geom/: Mandarine.mtl  angel_mini.mtl  angel_noise.mtl  angel_parts.mtl  angel_tex.mtl  blood_scene.mtl  bunny.mtl  bunny_2.mtl  bunny_arealight.mtl  bunny_t.mtl  bunnys.mtl  candle.mtl  candle.ply  cube.mtl  cupped_angel.mtl  dragon.mtl  head.mtl  highreshead.mtl  ice.mtl  justElephant.mtl  la_c_angel.mtl  lego.mtl  net.pt  scenes.txt  sphere.mtl  vol_cube.mtl
models/geom/lpshead/: head.mtl  temp.mtl
models/net/adam_best/weights/: b_0.txt  b_1.txt  b_2.txt  b_3.txt  b_4.txt  b_5.txt  b_6.txt  b_7.txt  b_8.txt  w_0.txt  w_1.txt  w_2.txt  w_3.txt  w_4.txt  w_5.txt  w_6.txt  w_7.txt  w_8.txt
models/scene/: neu_sss  neu_sss.xml
scripts/: BSSRDF_analysis.ipynb  generate_noise.ipynb  network_analysis.ipynb  obj_analysis.ipynb
src/: CMakeLists.txt  app.cpp  bsdfsim.cu  network.h
src/GUI/: CMakeLists.txt  GUI.cpp  GUI.h  ImGuiTheme.h  ImGui_helpers.cpp  ImGui_helpers.h
src/Render/: CMakeLists.txt  Renderer.cpp  Renderer.h
src/Render/Lights/: CMakeLists.txt  Envmap.cpp  Envmap.h  Lights.cpp  Lights.h  SunSky.cpp  SunSky.h
src/Render/Scene/: Accelerator.cpp  Accelerator.h  CMakeLists.txt  Denoiser.cpp  Denoiser.h  Photons.h  Pipeline.cpp  Pipeline.h  Scene.cpp  Scene.h
src/Render/optics/: CMakeLists.txt  Interface.h  Medium.cpp  Medium.h  load_mpml.cpp  load_mpml.h  milk.cpp  milk.h  string_utils.cpp
src/device/: AreaLight.h  bsdf.h  env_cameras.cu  envmap.h  fresnel.h  mc_simulator.cu  microfacet.h  phasefunc.h  refract.h  sampler.h  sdspheres.h  shaders.cu  subsurf_brdf.cu  trace.h  volume_shader.cu
src/device/cuda/: BufferView.h  GeometryData.h  LocalGeometry.h  MaterialData.h  color.h  helpers.h  random.h
src/device/shaders/: absorbing.cu  arealight.cu  basecolor.cu  bidirectional_volume.cu  blood.cu  bone.cu  check_normals.cu  directional.cu  distance.cu  distance_firsthit.cu  fresnel.cu  glossy.cu  helpers.cu  heterogeneous.cu  holdout.cu  lambertian.cu  mc_color.cu  mc_helpers.cu  metal.cu  mirror.cu  miss.cu  network.cu  network_inf.cu  normals.cu  radiance_holdout.cu  raygen.cu  rough_transparent.cu  shared.cu  spheres.cu  sub_surf.cu  translucent.cu  transparent.cu  volume.cu  volume_rough.cu
src/device/shaders/bssrdf/: standard_dipole.cu
src/gaussian/: CMakeLists.txt  Gaussian.h  GaussianAverage.h
src/misc/: Callbacks.h  Globals.cpp  Globals.h  Spline.h  Utility.h
src/network/: CMakeLists.txt  EvalNetwork.cpp  EvalNetwork.h  KernelNetwork.h
src/sh/: CMakeLists.txt  sh.cpp  sh.h
src/sutil/: CMakeLists.txt  Exception.h  Preprocessor.h  WorkDistribution.h  spline.h  sutil.cpp  sutil.h  sutilapi.h
src/sutil/Buffers/: BufferAlloc.cpp  BufferAlloc.h  MeshAllocator.h  SamplerAlloc.cpp  SamplerAlloc.h
src/sutil/IO/: HDRLoader.cpp  HDRLoader.h  PPMLoader.cpp  PPMLoader.h  QuatTrackBall.cpp  QuatTrackBall.h  Trackball.cpp  Trackball.h  quaternion_help.h
src/sutil/math/: Aabb.h  Matrix.h  Quaternion.h  complex.h  mat3.h  vec_math.h
src/sutil/shared/: CUDAOutputBuffer.h  Camera.cpp  Camera.h  GLDisplay.cpp  GLDisplay.h  structs.h
